--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  file: ^6.1.4
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   dartz: ^0.10.1
